--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<script>
-		location.href = 'http://github.com/AbOuLfOoOoOuF';
+		location.href = 'http://github.com/itsLuuke';
 	</script>
 	<head>
 		<meta name="yandex-verification" content="8dc0e0ff556314e2" />
